--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
       - app-network
     ports:
       - "8000:8000"
+    tty: true
 
   db:
     build:
@@ -34,6 +35,30 @@ services:
       - "5432:5432"  # PostgreSQLのデフォルトポート
     tty: true
 
+  jenkins:
+    build:
+      context: .
+      dockerfile: jenkins/Dockerfile
+    container_name: jenkins
+    restart: always
+    ports:
+      - '8080:8080'
+      - "50000:50000"
+    environment:
+      TZ: Asia/Tokyo
+      httpPort: 8080
+    volumes:
+      - jenkins_home:/var/jenkins_home
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - app-network
+    depends_on:
+      - python-app-container
+    tty: true
+
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  jenkins_home:
